[package]
name = "chat-me-daddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[lib]
name = "api_websocket"
path = "src/api_websocket.rs"


[dependencies]
actix = "0.13.0"
actix-web = "4.3.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.69"
env_logger = "0.10.0"
serde = "1.0.152"
websocket = "0.26.5"
